--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,8 +1,14 @@
-[env:esp32-c3-devkitm-1]
-platform    = espressif32
-board       = esp32-c3-devkitm-1
-framework   = arduino
+[env:seeed_xiao_esp32c3]
+platform      = espressif32
+board         = seeed_xiao_esp32c3
+framework     = arduino
 monitor_speed = 115200
+
+; XIAO ESP32-C3 uses hardware UART via onboard CH340 USB-to-Serial
+; Serial works out of the box — no USB CDC flags required
+; Safe to add these if using a newer espressif32 platform version:
+; build_flags = -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1
+
 lib_deps =
     me-no-dev/ESP Async WebServer @ ^1.2.3
     me-no-dev/AsyncTCP @ ^1.1.1
