--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: admin
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./dashboard/provisioning:/etc/grafana/provisioning
       - ./dashboard/dashboards:/etc/grafana/dashboards
     depends_on:
       - influxdb
